tests/errors/cpp_err5.f90
program cpp_err5
#if 1 + @ 1 2
#endif
print *, 'OK'
end program
